# indicator-transfer-buteo

./: CMakeLists.txt  Jenkinsfile
debian/: changelog  control  copyright
po/: CMakeLists.txt  indicator-transfer-buteo.pot
src/: CMakeLists.txt  buteo-plugin.cpp  buteo-source.cpp  buteo-source.h  buteo-transfer.cpp  buteo-transfer.h
tests/: CMakeLists.txt  buteo-syncfw.py  tst-transfer-plugin.cpp
